--- a/landing.html
+++ b/landing.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Comparte tu conocimiento en línea</title>
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <header>
+            <img src="img/Grupo6579@3x.png" alt="">
+            <h1>Comparte tu conocimiento en línea</h1>
+        </header>
+        <p>Bienvenido a Venn, una plataforma para dar cursos online con todas las opciones que necesitas para enseñar en línea,
+            <a href="#">¡Crea tu cuenta gratuita!</a>
+        </p>
+        <button>Crea tu cuenta gratis</button>
+        <div id="sliderPrincipalContainer">
+
+            <img src="img/Grupo6987_2@3x.png" alt="">
+            <img id="tarjetaSlider" src="img/Rectangulo8151@3x.png">
+        </div>
         
         <script src="" async defer></script>
     </body>
 </html>
+
+
