--- a/landing.html
+++ b/landing.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Landin Venn</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-<img src="img/Grupo%206579.webp">
-<h1>
-    Bienvenido a un espacio donde tu conocmiento se transforma en tu nuevo negocio
+<img id="logoVenn" src="img/Grupo%206579.webp">
+<h1>Bienvenido a un espacio donde tu conocimiento <br> se transforma en tu nuevo negocio
 </h1>
-<button> Crea tu cuenta gratis</button>
+<button>Crea tu cuenta gratis</button>
 <div id="tarjeta">
     <img src="img/AndreaV-web.png">
     <h3>Patricia Weil</h3>
@@ -26,7 +28,7 @@
         <img src="img/star.webp" alt="">
     </div>
 </div>
-<h2>Herramientas apra crear tu curso online</h2>
+<h2>Herramientas para crear tu curso online</h2>
 
 <div id="tarjetas">
     <div class="tarjetaProductos">
@@ -51,7 +53,7 @@
 
 <button> Crea tu cuenta gratis</button>
 
-<h5>Es un proceso muy simple</h5>
+<h2>Es un proceso muy simple</h2>
 <!--Numeros-->
 <img src="img/Grupo%207020.webp">
 <img src="img/Grupo%207022.webp">
@@ -65,8 +67,8 @@
 <img src="img/Grupo%207024.webp">
 <button> Crea tu cuenta gratis</button>
 
-<h5>Somos una plataforma
-    que lo tiene todo</h5>
+<h2>Somos una plataforma
+    que lo tiene todo</h2>
 <!--Fila 1-->
 <div class="tarjetaCaracteristica">
     <img src="img/Grupo%207051.webp">
