--- a/landing.html
+++ b/landing.html
@@ -9,23 +9,25 @@
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
-<img id="logoVenn" src="img/Grupo%206579.webp">
-<h1>Bienvenido a un espacio donde tu conocimiento <br> se transforma en tu nuevo negocio
-</h1>
-<button>Crea tu cuenta gratis</button>
-<div id="tarjeta">
-    <img src="img/AndreaV-web.png">
-    <h3>Patricia Weil</h3>
-    <h5>Psicología</h5>
-    <p>Tenía tiempo buscando una plataforma en donde hacer mis talleres, lo acabo de hacer en Venn. Si eres terapeuta y
-        estás buscando una plataforma que funcione sin VPN, ésta funciona muy bien, fue una experiencia bellísima y el
-        grupo estuvo buenísimo! Amo mi trabajo.</p>
-    <div class="estrellas">
-        <img src="img/star.webp" alt="">
-        <img src="img/star.webp" alt="">
-        <img src="img/star.webp" alt="">
-        <img src="img/star.webp" alt="">
-        <img src="img/star.webp" alt="">
+<div id="seccion1">
+    <img id="logoVenn" src="img/Grupo%206579.webp">
+    <h1>Bienvenido a un espacio donde tu conocimiento <br> se transforma en tu nuevo negocio
+    </h1>
+    <button>Crea tu cuenta gratis</button>
+    <div id="tarjeta">
+        <img src="img/AndreaV-web.png">
+        <h3>Patricia Weil</h3>
+        <h5>Psicología</h5>
+        <div class="estrellas">
+            <img src="img/star.webp" alt="">
+            <img src="img/star.webp" alt="">
+            <img src="img/star.webp" alt="">
+            <img src="img/star.webp" alt="">
+            <img src="img/star.webp" alt="">
+        </div>
+        <p>Tenía tiempo buscando una plataforma en donde hacer mis talleres, lo acabo de hacer en Venn. Si eres terapeuta y
+            estás buscando una plataforma que funcione sin VPN, ésta funciona muy bien, fue una experiencia bellísima y el
+            grupo estuvo buenísimo! Amo mi trabajo.</p>
     </div>
 </div>
 <h2>Herramientas para crear tu curso online</h2>
