--- a/landing.html
+++ b/landing.html
@@ -71,48 +71,50 @@
 
 <h2>Somos una plataforma
     que lo tiene todo</h2>
-<!--Fila 1-->
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207051.webp">
-    <p>Creacion de prodcutos gratuitos</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207056.webp">
-    <p>Cursos Pre Grabados ilimitados</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207047.webp">
-    <p>Sesiones en Vivo
-        ilimitadas</p>
-</div>
+<div class="cuadricula">
+        <!--Fila 1-->
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207051.webp">
+        <p>Creacion de prodcutos gratuitos</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207056.webp">
+        <p>Cursos Pre Grabados ilimitados</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207047.webp">
+        <p>Sesiones en Vivo
+            ilimitadas</p>
+    </div>
 
-<!--Fila dos -->
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207049.webp">
-    <p>Mentorías 1 a 1
-        ilimitadas</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207058.webp">
-    <p>Descarga tu base de datos con sólo un clic</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207053.webp">
-    <p>Plataforma de video integrada</p>
-</div>
+    <!--Fila dos -->
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207049.webp">
+        <p>Mentorías 1 a 1
+            ilimitadas</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207058.webp">
+        <p>Descarga tu base de datos con sólo un clic</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207053.webp">
+        <p>Plataforma de video integrada</p>
+    </div>
 
-<!--Fila tres -->
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207048.webp">
-    <p>Grabación de tus Sesiones en Vivo</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207057.webp">
-    <p>Generación de certificados automáticos</p>
-</div>
-<div class="tarjetaCaracteristica">
-    <img src="img/Grupo%207054.webp">
-    <p>Plataforma de pago integrada (Stripe/Paypal)</p>
+    <!--Fila tres -->
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207048.webp">
+        <p>Grabación de tus Sesiones en Vivo</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207057.webp">
+        <p>Generación de certificados automáticos</p>
+    </div>
+    <div class="tarjetaCaracteristica">
+        <img src="img/Grupo%207054.webp">
+        <p>Plataforma de pago integrada (Stripe/Paypal)</p>
+    </div> 
 </div>
 <!--Fila cuatro -->
 <button> Crea tu cuenta gratis</button>
@@ -130,7 +132,7 @@
         <li>Políticas de Privacidad</li>
         <li>Términos y Condiciones</li>
         <li>&copy; Venn 2021</li>
-    </ul>
+    </ul>  
 </footer>
 </body>
 </html>
