--- a/landing.html
+++ b/landing.html
@@ -75,16 +75,16 @@
         <!--Fila 1-->
     <div class="tarjetaCaracteristica">
         <img src="img/Grupo%207051.webp">
-        <p>Creacion de prodcutos gratuitos</p>
+        <p>Creacion de prodcutos <span class="negritas">gratuitos</span></p>
     </div>
     <div class="tarjetaCaracteristica">
         <img src="img/Grupo%207056.webp">
-        <p>Cursos Pre Grabados ilimitados</p>
+        <p>Cursos Pre Grabados <span class="negritas">ilimitados</span></p>
     </div>
     <div class="tarjetaCaracteristica">
         <img src="img/Grupo%207047.webp">
-        <p>Sesiones en Vivo
-            ilimitadas</p>
+        <p>Sesiones en Vivo<br>
+            <span class="negritas">ilimitadas</span></p>
     </div>
 
     <!--Fila dos -->
@@ -117,7 +117,7 @@
     </div> 
 </div>
 <!--Fila cuatro -->
-<button> Crea tu cuenta gratis</button>
+<button id="ultimoBoton"> Crea tu cuenta gratis</button>
 
 <footer>
     <img src="img/Logo_venn_footer.webp">
