Last-responsive-update

--- a/landing.html
+++ b/landing.html
@@ -2,137 +2,169 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Landin Venn</title>
+    <title>Landing Venn</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div id="seccion1">
-    <img id="logoVenn" src="img/Grupo%206579.webp">
-    <h1>Bienvenido a un espacio donde tu conocimiento <br> se transforma en tu nuevo negocio
-    </h1>
-    <button>Crea tu cuenta gratis</button>
-    <div id="tarjeta">
-        <img src="img/AndreaV-web.png">
-        <h3>Patricia Weil</h3>
-        <h5>Psicología</h5>
-        <div class="estrellas">
-            <img src="img/star.webp" alt="">
-            <img src="img/star.webp" alt="">
-            <img src="img/star.webp" alt="">
-            <img src="img/star.webp" alt="">
-            <img src="img/star.webp" alt="">
+    <img id="logoVenn" src="img/Grupo-6581403x.webp">
+    <h1>Comparte tu conocimiento en línea</h1>
+    <p>Bienvenido a Venn, una plataforma para dar cursos online con todas las opciones que necesitas para enseñar en línea,<strong style="color: #1489ff;"><br>¡Crea tu cuenta gratuita!</strong></p>
+    <button id="button1">Crea tu cuenta gratis</button>
+    <div id="slides">
+        <img class="arrow" src="img/Grupo8817@3x.webp" alt="">
+        <div id="tarjeta">
+            <img src="img/AndreaV-web.png">
+            <h3 class="desktop">Patricia Weil</h3>
+            <div id="career">
+                <h5 class="desktop">Psicología</h5>
+                <div class="estrellas">
+                    <img src="img/star.webp" alt="">
+                    <img src="img/star.webp" alt="">
+                    <img src="img/star.webp" alt="">
+                    <img src="img/star.webp" alt="">
+                    <img src="img/star.webp" alt="">
+                </div>                
+            </div>
+            <p>Tenía tiempo buscando una plataforma en donde hacer mis talleres, lo acabo de hacer en Venn. Si eres terapeuta y
+                estás buscando una plataforma que funcione sin VPN, ésta funciona muy bien, fue una experiencia bellísima y el
+                grupo estuvo buenísimo! Amo mi trabajo.</p>
+            <h3 class="tablet">Patricia Weil</h3>
+            <h5 id="career2" class="tablet">Psicología</h5>         
         </div>
-        <p>Tenía tiempo buscando una plataforma en donde hacer mis talleres, lo acabo de hacer en Venn. Si eres terapeuta y
-            estás buscando una plataforma que funcione sin VPN, ésta funciona muy bien, fue una experiencia bellísima y el
-            grupo estuvo buenísimo! Amo mi trabajo.</p>
+        <img class="setRatios" src="img/ratios1.png" alt="">
+        <img class="arrow" src="img/Grupo8810@3x.webp" alt="">
     </div>
 </div>
-<h2>Herramientas para crear tu curso online</h2>
-
-<div id="tarjetas">
-    <div class="tarjetaProductos">
-        <img src="/img/pantallas/Sesiones_Vivox2.png" alt="">
-        <h5>Sesiones en vivo</h5>
-        <p>Un espacio para enseñar y resolver dudas al momento. </p>
+<div id="seccion2">
+    <h2 id="tools">Herramientas para crear tu curso online</h2>
+    <div id="seccionHerramientas">
+        <div class="tarjetaProductos">
+            <img src="img/Sesiones_Vivox2.png" alt="">
+            <h5>Sesiones en Vivo</h5>
+            <p>Un espacio para enseñar <br> y resolver dudas al momento.</p>
+        </div>
+        <div class="tarjetaProductos desktop">
+            <img src="img/Cursos-Pre-Grabadosx2.png" alt="">
+            <h5>Cursos Pre Grabados</h5>
+            <p>Solo carga tu curso en la <br> plataforma <br> y genera ingresos pasivos.</p>
+        </div>
+        <div class="tarjetaProductos desktop">
+            <img src="img/Mentorias_1_1x2.png" alt="">
+            <h5>Mentorías 1 a 1</h5>
+            <p> Tiempo exclusivo para trabajar de forma individual con tu aprendiz.</p>
+        </div>
     </div>
-    <div class="tarjetaProductos">
-        <img src="/img/pantallas/Cursos-Pre-Grabadosx2.png" alt="">
-        <h5>  Cursos Pre Grabados
-        </h5>
-        <p>Solo carga tu curso en la plataforma
-            y genera ingresos pasivos.</p>
+    <img class="setRatios2" src="img/ratios2.png" alt="">
+    <button class="button2"> Crea tu cuenta gratis</button>
+</div>
+<div id="seccion3">
+    <h2 class="header3">Es un proceso muy simple</h2>
+    <div class="process desktop">
+        <img id="number1" class="number" src="img/Grupo%207020.webp">
+        <img id="number2" class="number" src="img/Grupo%207022.webp">
+        <img id="number3" class="number" src="img/Grupo%207021.webp">
+        <img id="account" class="processLogos" src="img/Grupo-7001.svg">
+        <img id="profile" class="processLogos" src="img/Grupo-7002.svg">
+        <img id="course" class="processLogos" src="img/Grupo-7003.svg">
+        <p id="crea">Crea tu cuenta</p>
+        <p id="completa">Completa tu perfil</p>
+        <p id="online">Crea tu curso online</p>
     </div>
-    <div class="tarjetaProductos">
-        <img src="/img/pantallas/Mentorias_1_1x2.png" alt="">
-        <h5>  Mentorías 1 a 1
-        </h5>
-        <p> Tiempo exclusivo para trabajar de forma individual con tu aprendiz.</p>
+    <div class="tablet process">
+        <img class="processLogos" src="img/Grupo-8213.svg">
+        <p id="completa" class="paragraph">Completa tu perfil</p>
     </div>
+    <img class="tablet ratios3" src="img/ratios3.png" alt="">
+</div>
+<div class="interlude">
+    <button class="button3"> Crea tu cuenta gratis</button>
 </div>
 
-<button> Crea tu cuenta gratis</button>
-
-<h2>Es un proceso muy simple</h2>
-<!--Numeros-->
-<img src="img/Grupo%207020.webp">
-<img src="img/Grupo%207022.webp">
-<img src="img/Grupo%207021.webp">
- 
-<!--Circulos-->
-<img src="img/Grupo%209210.webp">
-<img src=" img/Rectángulo 8199@3x.webp">
-<img src="img/Grupo%207025.webp">
-<img src=" img/Rectángulo 8199@3x.webp">
-<img src="img/Grupo%207024.webp">
-<button> Crea tu cuenta gratis</button>
-
-<h2>Somos una plataforma
-    que lo tiene todo</h2>
-<div class="cuadricula">
-        <!--Fila 1-->
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207051.webp">
-        <p>Creacion de prodcutos <span class="negritas">gratuitos</span></p>
+<div id="seccion4">
+    <img class="tablet line" src="img/Rectangulo-7185403x.png" alt="">
+    <h2 id="header4">Somos una plataforma <br>que lo tiene todo</h2>
+    <div class="cuadricula">
+            <!--Fila 1-->
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207051.webp">
+            <p>Creación de productos <br> <span class="negritas">gratuitos</span></p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207056.webp">
+            <p>Cursos Pre Grabados <br> <span class="negritas">ilimitados</span></p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207047.webp">
+            <p>Sesiones en Vivo<br>
+                <span class="negritas">ilimitadas</span></p>
+        </div>
+        <!--Fila dos -->
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207049.webp">
+            <p>Mentorías 1 a 1 <br> <span class="negritas"> ilimitadas</span></p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207058.webp">
+            <p><span class="negritas">Descarga tu base de datos</span> <br> con sólo un clic</p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207053.webp">
+            <p>Plataforma de video <br> <span class="negritas">integrada</p>
+        </div>
+        <!--Fila tres -->
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207048.webp">
+            <p><span class="negritas">Grabación</span> de tus Sesiones <br> en Vivo</p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207057.webp">
+            <p>Generación de certificados <br> <span class="negritas">automáticos</span></p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo%207054.webp">
+            <p>Plataforma de pago <br> <span class="negritas">integrada (Stripe/Paypal)</span></p>
+        </div>
+        <!-- Fila cuatro -->
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo-6657.png">
+            <p>Sincronización de husos <br><span class="negritas">horarios</span></p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo-6659.png">
+            <p><span class="negritas">Envío de correos</span> masivos a <br>tu base de datos</p>
+        </div>
+        <div class="tarjetaCaracteristica">
+            <img src="img/Grupo-6660.png">
+            <p><span class="negritas">Recordatorios automáticos</span><br>para eventos en vivo</p>
+        </div> 
     </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207056.webp">
-        <p>Cursos Pre Grabados <span class="negritas">ilimitados</span></p>
-    </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207047.webp">
-        <p>Sesiones en Vivo<br>
-            <span class="negritas">ilimitadas</span></p>
-    </div>
-
-    <!--Fila dos -->
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207049.webp">
-        <p>Mentorías 1 a 1
-            ilimitadas</p>
-    </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207058.webp">
-        <p>Descarga tu base de datos con sólo un clic</p>
-    </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207053.webp">
-        <p>Plataforma de video integrada</p>
-    </div>
-
-    <!--Fila tres -->
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207048.webp">
-        <p>Grabación de tus Sesiones en Vivo</p>
-    </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207057.webp">
-        <p>Generación de certificados automáticos</p>
-    </div>
-    <div class="tarjetaCaracteristica">
-        <img src="img/Grupo%207054.webp">
-        <p>Plataforma de pago integrada (Stripe/Paypal)</p>
-    </div> 
+    <button id="ultimoBoton"> Crea tu cuenta gratis</button>
 </div>
-<!--Fila cuatro -->
-<button id="ultimoBoton"> Crea tu cuenta gratis</button>
-
-<footer>
-    <img src="img/Logo_venn_footer.webp">
-    <!--Redes sociales-->
-    <img src="img/001-facebook.webp">
-    <img src="img/003-instagram.webp">
-    <img src="img/002-linkedin.webp">
-    <img src="img/twitter-1.webp">
-    <img src="img/Rectángulo%208235.webp">
-
-    <ul>
-        <li>Políticas de Privacidad</li>
-        <li>Términos y Condiciones</li>
-        <li>&copy; Venn 2021</li>
-    </ul>  
+<footer class="section5">
+    <div id="barFooter">
+        <img id="logoFooter" src="img/Logo_venn_footer.webp">
+        <!--Redes sociales-->
+        <div class="redes">
+            <img src="img/001-facebook.svg">
+            <img src="img/003-instagram.svg">
+            <img src="img/002-linkedin.svg">
+            <img src="img/twitter-1.svg">
+            <img src="img/youtube_venn_footer.svg">
+            <img src="img/tiktok.svg">
+        </div>
+    </div>
+    <div id="terms">
+        <div class="last">
+            <p>Políticas de Privacidad</p>
+            <p>Términos y Condiciones</p>
+            <p>&copy; Venn 2021</p>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
